# BFMC_DriverlES_2023

./: .clang-format  .gitattributes  .gitmodules  README.md  _a_star_8cpp.html  _a_star_8cpp__incl.dot  _a_star_8hpp.html  _a_star_8hpp.js  _a_star_8hpp__dep__incl.dot  _a_star_8hpp__incl.dot  _a_star_8hpp_source.html  _a_star_read_file_8cpp.html  _a_star_read_file_8cpp__incl.dot  _a_star_read_file_8hpp.html  _a_star_read_file_8hpp.js  _a_star_read_file_8hpp__dep__incl.dot  _a_star_read_file_8hpp__incl.dot  _a_star_read_file_8hpp_source.html  _actions_8cpp.html  _actions_8cpp.js  _actions_8cpp__incl.dot  _actions_8hpp.html  _actions_8hpp.js  _actions_8hpp__dep__incl.dot  _actions_8hpp__incl.dot  _actions_8hpp_source.html  _average_distance_image_8hpp.html  _average_distance_image_8hpp.js  _average_distance_image_8hpp__dep__incl.dot  _average_distance_image_8hpp__incl.dot  _average_distance_image_8hpp_source.html  _camera_8cpp.html  _camera_8cpp__incl.dot  _camera_8hpp.html  _camera_8hpp__dep__incl.dot  _camera_8hpp__incl.dot  _camera_8hpp_source.html  _command_8cpp.html  _command_8cpp__incl.dot  _command_8hpp.html  (+441 more)
.devcontainer/: devcontainer.json  dockerfile  post_start_command
.github/workflows/: doxygen.yml
Jetson_Platform/: .gitignore
Jetson_Platform/doc/source/: Doxyfile
Jetson_Platform/perception/: CMakeLists.txt
Jetson_Platform/perception/include/: AvgDistImage.h  Cv-helpers.hpp  LaneDetection.h  ObjectDetection.h
Jetson_Platform/perception/src/: LaneDetection.cpp  ObjectDetection.cpp  main.cpp
Pi_Platform/: .gitignore  RTIMULib.ini  build_catkin_ws
Pi_Platform/doc/source/: Doxyfile
Pi_Platform/src/bfmc_action/: CMakeLists.txt  package.xml
Pi_Platform/src/bfmc_action/include/planner/: AStar.hpp  Actions.hpp  Command.hpp  Environment.hpp
Pi_Platform/src/bfmc_action/launch/: action.launch
Pi_Platform/src/bfmc_action/src/planner/: AStar.cpp  Actions.cpp  Command.cpp  Environment.cpp  planner_node.cpp
Pi_Platform/src/bfmc_input/: CMakeLists.txt  package.xml
Pi_Platform/src/bfmc_input/include/camera_perception/: AverageDistanceImage.hpp  Camera.hpp  LaneDetection.hpp  SignDetection.hpp
Pi_Platform/src/bfmc_input/launch/: input.launch
Pi_Platform/src/bfmc_input/scripts/camera_perception/: onnx_rename_layer.py
Pi_Platform/src/bfmc_input/scripts/imu/: imu_node.py
Pi_Platform/src/bfmc_input/scripts/traffic_light/: traffic_light_node.py
Pi_Platform/src/bfmc_input/src/camera_perception/: Camera.cpp  LaneDetection.cpp  SignDetection.cpp  camera_listener_node.cpp  camera_perception_node.cpp
Pi_Platform/src/bfmc_input/src/wheel_speed/: wheel_speed_node.cpp
Pi_Platform/src/bfmc_interface/: CMakeLists.txt  package.xml
Pi_Platform/src/bfmc_interface/msg/: EgoPose.msg  Environment.msg  IMU.msg  LaneDetection.msg  NucleoCommand.msg  SignDetection.msg  SimulatorActuator.msg  SimulatorCamera.msg  SimulatorIMU.msg  SimulatorWheelSpeed.msg  TrafficLight.msg  WheelSpeed.msg
Pi_Platform/src/bfmc_output/: CMakeLists.txt  package.xml
Pi_Platform/src/bfmc_output/include/serial_handler/: Message.hpp  ResponseHandler.hpp  SerialComManager.hpp  SerialPortHandler.hpp  serial_handler_node.hpp
Pi_Platform/src/bfmc_output/launch/: output.launch
Pi_Platform/src/bfmc_output/src/serial_handler/: Message.cpp  ResponseHandler.cpp  SerialComManager.cpp  SerialPortHandler.cpp  serial_handler_node.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  (+97 more)
