<?xml version="1.0"?>
<package format="2">
  <name>bfmc_action</name>
  <version>0.0.0</version>
  <description>The Action Planner package</description>

  <maintainer email="jakob@todo.todo">jakob</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>bfmc_interface</depend>
</package>
