<?xml version="1.0"?>
<package format="2">
  <name>bfmc_interface</name>
  <version>0.0.0</version>
  <description>Package containing all BFMC custom message definitions.</description>

  <maintainer email="jakob.haeringer@gmail.com">BFMC</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

</package>